# Game_of_Life

./: .gitignore  README.md
CMake/: CMakeLists.txt
headers/: game.h
src/: game.c  help.c  term.c  univ.c
